src/App.css
html, body {
  font-family: var(--font);
  background-color: var(--background);
  color: var(--txt);
  margin: 0;
  position: relative;
  min-height: calc(100vh - 5.5rem);
}


/* shared styles */
main {
  padding-bottom: 3.5rem;  /* leave room for footer */
  position: relative;
}

.txt {
  letter-spacing: 0.5px;
  color: var(--txt);
  font-size: 1.2rem;
  /* padding-top: 8px; */
}

.txt-highlight {
  color: var(--highlight);
}

.links-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  padding: 1rem;
}

.link-button {
  width: 250px;
  margin: 1.5rem 0 0.5rem 0;
  cursor: pointer;
  display: flex;
  flex-direction: row wrap;
  align-items: center;
  justify-content: space-evenly;
  border: 3px solid var(--secondary);
  border-radius: 18px;
  font-size: 1.5rem;
  transition: all 0.3s ease;
  text-decoration: none;
  color: var(--txt);
}

.link-button:hover {
  border: 3px solid var(--highlight);
}
/* end shared styles */


/* header component styles */
header {
  display: flex;
  flex-direction: column;
}

.header-wrapper {
  padding: 0 2rem;
  border-bottom: 3px solid var(--txt);
  display: flex;
  justify-content: space-between;
}

.menu-btn {
  position: absolute;
  z-index: 9999;
  right: 35px;
  top: 20px;
  cursor: pointer;
  transition: all 0.3s ease-out;
}

.btn-line {
  width: 28px;
  height: 3px;
  margin-bottom: 5px;
  background: var(--txt);
  transition: all 0.3s ease-out;
}

.close {
  transform: rotate(180deg);
}

.close .btn-line:nth-child(1) {
  transform: rotate(45deg) translate(5px, 5px);
  background: var(--highlight);
}

.close .btn-line:nth-child(2) {
  opacity: 0;
}

.close .btn-line:nth-child(3) {
  transform: rotate(-45deg) translate(7px, -6px);
  background: var(--highlight);
}
/* end header component styles */


/* nav-menu component styles */
.nav-menu {
  position: relative;
  top: -20px;
  opacity: 0;
  transition: all 0.3s ease;
  user-select: none;
  margin: 0 auto;
  width: 90%;
}

.nav-menu.nav-visible {
  top: 0;
  opacity: 1;
  border-bottom: 1px solid var(--secondary);
}

.nav-menu ul {
  list-style-type: none;
  padding: 0;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}

.menu-item {
  padding-top: 5px;
  margin: 10px 20px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
}
/* end nav-menu component styles */


/* hero component styles */
.hero {
  min-height: 35vh;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 10vh 0;
  flex-direction: column;
}

.hero-grid {
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-rows: 300px;
  grid-template-columns: 1fr 1fr 1fr;
}

.hero-grid>* {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-flow: column;
  margin: 0 2rem;
}

.hero-title {
  grid-row: 1 / 2;
  grid-column: 1 / 3;
}

.hero-title>* {
  font-size: 3.5rem;
  font-weight: 600;
  padding: 0;
  margin: 0;
}

.hero-title h2 {
  border-bottom: 2px solid var(--secondary);
  padding-bottom: 0.5rem;
  margin-bottom: 0.5rem;
}

.hero-title p {
  font-size: 2rem;
  font-weight: 300;
  letter-spacing: 1.3px;
}

.hero-portrait {
  grid-row: 1 / 2;
  grid-column: 3 / 4;
  user-select: none;
}

.portrait-container {
  border-radius: 50%;
  border: 5px solid var(--highlight);
  width: 250px;
  height: 250px;
}

.portrait {
  border-radius: 50%;
  width: 100%;
  height: 100%;
}

.hero-intro-txt {
  margin: 0 10rem;
  padding: 1rem;
}
/* end hero component styles */


/* footer component styles */
footer {
  user-select: none;
  display: flex;
  justify-content: space-around;
  align-items: center;
  border-top: 3px solid var(--txt);
  position: absolute;
  bottom: 0;
  width: calc(100% - 1rem);
  height: 2.5rem;
  padding: 0.5rem;
}

/* light/dark mode toggle switch */
.slider-toggle {
  width: 50px;
  height: 30px;
  background-color: var(--secondary);
  border-radius: 15px;
  display: flex;
  align-items: center;
  position: relative;
  cursor: pointer;
}

.slider-track {
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  align-items: center;
  transition: transform 0.3s ease;
}

.toggle-icon {
  margin-left: 5px;
  font-size: 20px;
  color: #fff;
}

.slider-toggle.on .slider-track {
  transform: translateX(20px);
}

.footer-txt {
  color: var(--txt);
}
/* end footer component styles */


/* about me page */
.about-me-txt-container {
  max-width: 700px;
  margin: 1rem auto 3rem auto;
}

.txt-container-header {
  width: 90%;
  margin: 0 auto;
  padding: 1rem 0;
  font-weight: 500;
  font-size: 2.5rem;
  letter-spacing: 1px;
  /* font-style: italic; */
  border-bottom: 3px solid var(--secondary);
}

.about-me-txt-container>.txt {
  font-size: 1.1rem;
  padding-top: 2rem;
}

.language-carousel {
  margin: 2rem auto;
  /* display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-evenly; */
  display: grid;
  gap: 50px;
  grid-template-columns: auto auto auto;
}

.dev-icon {
  font-size: 4rem;
  color: var(--txt);
  transition: all 0.3s ease;
  cursor: pointer;
  margin: 0 1rem;
}

.dev-icon:hover {
  color: var(--highlight);
}

.icon-txt {
  font-size: 1rem;
}
/* end about me page */

/* projects page */
.projects {
  margin: 3rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.project-card {
  margin: 0.5rem 0 2rem 0;
  padding-bottom: 2rem;
  height: 30vh;
  min-height: 350px;
  width: 80%;
  min-width: 200px;
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-around;
  border: 3px solid var(--secondary);
  border-radius: 15px;
}

.project-card>* {
  height: 100%;
  width: 40%;
  min-width: 80px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.project-card-right {
  padding-top: 2rem;
}

.project-title {
  font-size: 1.5rem;
  font-weight: 500;
  letter-spacing: 1.5px;
}

.project-link {
  color: var(--txt);
  letter-spacing: 1.3px;
  font-weight: 400;
  font-size: 1.5rem;
  text-decoration: none;
  border: 2px solid var(--secondary);
  border-radius: 30px;
  transition: all 0.3s ease;
  padding: 1rem;
}

.project-link:hover {
  border: 2px solid var(--highlight);
}

.project-img {
  width: 250px;
  height: 250px;
  object-fit: cover;
  border: 2px solid var(--secondary);
  border-radius: 30px;
  cursor: pointer;
  transition: all 0.3s ease;
}

.project-img:hover {
  border: 2px solid var(--highlight);
}

.project-languages {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-evenly;
  padding: 0;
  margin: 0 1rem;
}

.project-languages > * {
  font-size: 2rem;
}
/* end projects page */


/* media queries for responsive layout */

/* desktop styles */
@media screen and (max-width: 1024px) {
  .hero-intro-txt {
    margin: 0;
  }

  .project-card {
    width: 100%;
  }
}

/* tablet styles */
@media screen and (max-width: 768px) {
  .hero {
    min-height: 20vh;
    margin: 0.5rem;
  }

  .hero-grid {
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr;
  }

  .hero-grid>* {
    grid-column: 1 / 2;
    margin: 1.5rem 0;
    justify-content: center;
  }

  .hero-title {
    grid-row: 1 / 2;
  }

  .hero-portrait {
    grid-row: 2 / 3;
  }

  .hero-intro-txt {
    grid-row: 3 / 4;
    margin: 0;
  }

  .project-card {
    flex-flow: column nowrap;
    height: auto;
  }

  .project-card>* {
    width: 90%;
  }

  .project-card-right>* {
    margin-top: 1.5rem;
  }
}

/* mobile phone styles */
@media screen and (max-width: 580px) {
  .language-carousel {
    gap: 30px;
  }

  header {
    height: 50px;
    transition: all 0.3s ease;
  }

  header:has(.nav-menu.nav-visible) {
    height: 200px;
  }

  .project-card {
    min-width: 120%;
  }

  .project-img {
    width: 200px;
    height: 200px;
  }
}

